cmake_minimum_required(VERSION 3.26)
project(Coleccion_de_Ejercicios_Flujo_C_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coleccion_de_Ejercicios_Flujo_C_
        "Ejercicio 1/main.cpp"
        "Ejercicio 2/main.cpp"
        "Ejercicio 3/main.cpp"
        "Ejercicio 4/main.cpp"
        "Ejercicio 5/main.cpp")
